; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_score-dis.c_print_insn_parallel_sym.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/opcodes/extr_score-dis.c_print_insn_parallel_sym.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.disassemble_info = type { i32 (i8*, i8*, i8*)*, i8* }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c" ||\0A      \09          \09\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.disassemble_info*)* @print_insn_parallel_sym to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_insn_parallel_sym(%struct.disassemble_info* %0) #0 {
  %2 = alloca %struct.disassemble_info*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32 (i8*, i8*, i8*)*, align 8
  store %struct.disassemble_info* %0, %struct.disassemble_info** %2, align 8
  %5 = load %struct.disassemble_info*, %struct.disassemble_info** %2, align 8
  %6 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %5, i32 0, i32 1
  %7 = load i8*, i8** %6, align 8
  store i8* %7, i8** %3, align 8
  %8 = load %struct.disassemble_info*, %struct.disassemble_info** %2, align 8
  %9 = getelementptr inbounds %struct.disassemble_info, %struct.disassemble_info* %8, i32 0, i32 0
  %10 = load i32 (i8*, i8*, i8*)*, i32 (i8*, i8*, i8*)** %9, align 8
  store i32 (i8*, i8*, i8*)* %10, i32 (i8*, i8*, i8*)** %4, align 8
  %11 = load i32 (i8*, i8*, i8*)*, i32 (i8*, i8*, i8*)** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 %11(i8* %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
